[package]
name = "webrtc-mdns"
version = "0.5.0"
authors = ["Rain Liu <yuliu@webrtc.rs>"]
edition = "2018"
description = "A pure Rust implementation of mDNS"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/webrtc-mdns"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/mdns"
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "reuse_port" ]
reuse_port = []

[dependencies]
util = { version = "0.6.0", path = "../util", package = "webrtc-util", default-features = false, features = ["ifaces"] }
deno-net = { path = "../deno-net" }

wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
tokio = { version = "1.19" }
log = "0.4.16"
thiserror = "1.0"
getrandom = { version = "0.1.16", features = ["wasm-bindgen"] }
getrandom2 = { package = "getrandom", version = "0.2.8", features = ["js"] }

[dev-dependencies]
env_logger = "0.9.0"
chrono = "0.4.19"
clap = "3.2.6"

[[example]]
name = "mdns_query"
path = "examples/mdns_query.rs"
bench = false

[[example]]
name = "mdns_server"
path = "examples/mdns_server.rs"
bench = false

[[example]]
name = "mdns_server_query"
path = "examples/mdns_server_query.rs"
bench = false
