[package]
name = "rtcp"
version = "0.7.1"
authors = ["Rain Liu <yliu@webrtc.rs>", "Michael Uti <utimichael9@gmail.com>"]
edition = "2018"
description = "A pure Rust implementation of RTCP"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/rtcp"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/rtcp"
rust-version = "1.60.0"

[dependencies]
util = { version = "0.7.0", path = "../util", package = "webrtc-util", default-features = false, features = ["marshal"] }

wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
bytes = "1"
thiserror = "1.0"
getrandom = { version = "0.1.16", features = ["wasm-bindgen"] }
getrandom2 = { package = "getrandom", version = "0.2.8", features = ["js"] }

[dev-dependencies]
tokio = { version = "1.19", features = ["sync"] }
tokio-test = "0.4.0" # must match the min version of the `tokio` crate above
