[package]
name = "rtp"
version = "0.6.8"
authors = ["Rain Liu <yliu@webrtc.rs>", "Michael Uti <utimichael9@gmail.com>"]
edition = "2018"
description = "A pure Rust implementation of RTP"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/rtp"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/rtp"
rust-version = "1.60.0"

[dependencies]
util = { version = "0.7.0", path = "../util", package = "webrtc-util", default-features = false, features = ["marshal", "sync"] }
deno-net = { path = "../deno-net" }

wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
bytes = "1"
rand = "0.8.5"
getrandom = { version = "0.1.16", features = ["wasm-bindgen"] }
getrandom2 = { package = "getrandom", version = "0.2.8", features = ["js"] }
thiserror = "1.0"
async-trait = "0.1.56"
serde = { version = "1.0.102", features = ["derive"] }

[dev-dependencies]
chrono = "0.4.19"
criterion = "0.3.5"
tokio = { version = "1.19" }
tokio-test = "0.4.0" # must match the min version of the `tokio` crate above

[[bench]]
name = "packet_bench"
harness = false
