[package]
name = "sdp"
version = "0.5.3"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2018"
description = "A pure Rust implementation of SDP"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/sdp"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/sdp"
rust-version = "1.60.0"

[dependencies]
deno-net = { path = "../deno-net" }

wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
url = "2.2"
rand = "0.8.5"
getrandom = { version = "0.1.16", features = ["wasm-bindgen"] }
getrandom2 = { package = "getrandom", version = "0.2.8", features = ["js"] }
thiserror = "~1.0.10"
substring = "1.4"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "bench"
harness = false
